// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Clipboard Snapshot Tests > Displays Clipboard 1`] = `
<div>
  <div
    class="_clipboard_1gfx9_2"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r0:"
  >
    <div
      class="_input_8krfi_2 _clipboard__input_15z7l_2"
    >
      <input
        class="_input__field_8krfi_23"
        data-part="control"
        data-scope="clipboard"
        readonly=""
        type="text"
        value="Test Message"
      />
      <div
        class="_input__actions_8krfi_7"
      />
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_oxki5_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_kl6dq_2 _button--primary_kl6dq_82 _button--xs_kl6dq_25 _button--ghost_kl6dq_99"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip::r1::trigger"
        type="button"
      >
        <span
          class="_icon_3t4o5_2 _icon--file-copy_3t4o5_202"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays disabled Clipboard 1`] = `
<div>
  <div
    class="_clipboard_1gfx9_2 _clipboard--disabled_1gfx9_18"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r2:"
  >
    <div
      class="_input_8krfi_2 _clipboard__input_15z7l_2"
    >
      <input
        class="_input__field_8krfi_23"
        data-part="control"
        data-scope="clipboard"
        disabled=""
        readonly=""
        type="text"
        value="Test Message"
      />
      <div
        class="_input__actions_8krfi_7"
      />
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_oxki5_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_kl6dq_2 _button--primary_kl6dq_82 _button--xs_kl6dq_25 _button--ghost_kl6dq_99"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        disabled=""
        id="tooltip::r3::trigger"
        type="button"
      >
        <span
          class="_icon_3t4o5_2 _icon--file-copy_3t4o5_202"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays loading Clipboard 1`] = `
<div>
  <div
    class="_clipboard_1gfx9_2"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r4:"
  >
    <div
      class="_input_8krfi_2 _clipboard__input_15z7l_2"
    >
      <input
        class="_input__field_8krfi_23 _input__field--loading_8krfi_64"
        data-part="control"
        data-scope="clipboard"
        readonly=""
        type="text"
        value="Test Message"
      />
      <div
        class="_input__actions_8krfi_7"
      >
        <span
          class="_spinner_17ovx_10 _spinner--primary_17ovx_29 _spinner--md_17ovx_20 _input__actions__loading_8krfi_18"
          role="progressbar"
        >
          <svg
            class="_spinner__svg_17ovx_35"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="24"
              width="24"
            />
            <g
              transform="translate(-237.694 -93.932)"
            >
              <path
                d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                transform="translate(5486 4225)"
              />
              <circle
                cx="1"
                cy="1"
                r="1"
                transform="translate(248.694 114.932)"
              />
              <circle
                cx="1"
                cy="1"
                r="1"
                transform="translate(238.694 104.932)"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_oxki5_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_kl6dq_2 _button--primary_kl6dq_82 _button--xs_kl6dq_25 _button--ghost_kl6dq_99"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip::r5::trigger"
        type="button"
      >
        <span
          class="_icon_3t4o5_2 _icon--file-copy_3t4o5_202"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Clipboard Snapshot Tests > Displays masked Clipboard 1`] = `
<div>
  <div
    class="_clipboard_1gfx9_2"
    data-part="root"
    data-scope="clipboard"
    data-testid="clipboard"
    id="clip::r6:"
  >
    <div
      class="_input_8krfi_2 _clipboard__input_15z7l_2"
    >
      <input
        class="_input__field_8krfi_23 _input__field--toggle-mask_8krfi_64"
        data-part="control"
        data-scope="clipboard"
        readonly=""
        type="password"
        value="Test Message"
      />
      <div
        class="_input__actions_8krfi_7"
      >
        <button
          class="_button_kl6dq_2 _button--primary_kl6dq_82 _button--xs_kl6dq_25 _button--ghost_kl6dq_99"
          type="button"
        >
          <span
            class="_icon_3t4o5_2 _icon--eye-off_3t4o5_196"
          />
        </button>
      </div>
    </div>
    <div
      aria-label="Copy to clipboard"
      class="_clipboard__copy_oxki5_2"
      data-part="trigger"
      data-scope="clipboard"
      type="button"
    >
      <button
        class="_button_kl6dq_2 _button--primary_kl6dq_82 _button--xs_kl6dq_25 _button--ghost_kl6dq_99"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip::r7::trigger"
        type="button"
      >
        <span
          class="_icon_3t4o5_2 _icon--file-copy_3t4o5_202"
        />
      </button>
    </div>
  </div>
</div>
`;
